CAMEL-10141: move compile settings for Java 9 to camel-parent