@@ -648,22 +648,6 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven-compiler-plugin-version}</version>
-            <configuration>
-              <source>${jdk.version}</source>
-              <target>${jdk.version}</target>
-              <maxmem>512M</maxmem>
-              <fork>true</fork>
-              <compilerArgs>
-                <arg>-J--add-modules</arg>
-                <arg>-Jjava.xml.bind</arg>
-              </compilerArgs>
-            </configuration>
-          </plugin>
-
-          <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <!-- skip file stress tests as they are intended to run manually -->
