@@ -5154,6 +5154,21 @@
                 </dependency>
               </dependencies>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>${maven-compiler-plugin-version}</version>
+              <configuration>
+                <source>${jdk.version}</source>
+                <target>${jdk.version}</target>
+                <maxmem>512M</maxmem>
+                <fork>true</fork>
+                <compilerArgs>
+                  <arg>-J--add-modules</arg>
+                  <arg>-Jjava.xml.bind</arg>
+                </compilerArgs>
+              </configuration>
+            </plugin>
           </plugins>
         </pluginManagement>
       </build>
